--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    {% if email_warning %}
+        <h2 style="color: black;">{{ email_warning }}</h2>
+    {% elif email %}
+        <h2>Your UofT email is {{ email }}</h2>
+    {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
 {% endblock %}
