--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}! Welcome to Lab3 Docker!</h1>
     {% if email_warning %}
         <h2 style="color: black;">{{ email_warning }}</h2>
     {% elif email %}
