--- a/templates/user.html
+++ b/templates/user.html
@@ -2,6 +2,6 @@
 {% block title %}Flasky{% endblock %}
 {% block page_content %}
 <div class="page-header">
- <h1>Hello, {{ name }}!</h1>
+ <h1>Hello, {{ name }}! Welcome to Lab3 Docker!</h1>
 </div>
 {% endblock %}
